# Wippestoolen

./: .dockerignore  .env.example  .env.nas.example  .env.railway.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  Instructions.md  README.md  add_prod_categories.py  clear_test_data.py  create_sample_data.py  create_superuser.py  create_table_script.py  create_test_data.py  create_tool_photos.sql  db.sqlite3  docker-compose.yml  entrypoint.sh  manage.py  production_test.py  production_test_results.json  pyproject.toml  pytest.ini  test_login.py  test_server.py  test_tool_creation.py  update_categories_german.py
.claude/: settings.local.json
.claude/agents/: aws-cloud-expert.md  backend-expert.md  database-expert.md  frontend-expert.md  project-manager.md  python-expert.md  security-specialist.md  software-architect.md
.claude/commands/: cap.md  intro.md  session-end.md  session-start.md
.claude/doc/architecture/: frontend_architecture.md  system_architecture.md
.claude/doc/backend/: 2026-03-15_backend_audit.md  api_design.md  auth_implementation.md  booking_system_design.md  fastapi_routing_debug.md  frontend_integration_guide.md  notification_system_design.md  review_system_design.md  test_fixtures_best_practices.md  tool_management_api.md
.claude/doc/database/: advanced_booking_optimization.md  async_session_troubleshooting.md  booking_schema_optimization.md  connection_security_patterns.md  rds_connection_troubleshooting.md  schema_design.md  test_database_setup.md  user_registration_fix.md
.claude/doc/frontend/: 2026-03-15_home_screen_designs.md  authentication_ui.md  design_preview.html  framework_recommendations.md  frontend_implementation_plan.md  missing_features_implementation_plan.md  tool_browsing_ui.md  ui_components.md  user_flows.md
.claude/doc/infrastructure/: aws_design.md  deployment-troubleshooting.md  docker-deployment-guide.md  nextjs_frontend_deployment_analysis.md
.claude/doc/pm-reports/: frontend_analysis.md
.claude/doc/python/: development_standards.md  import_dependency_analysis.md
.claude/doc/security/: 2026-03-15_public_repo_audit.md  booking_security_patterns.md  frontend_security_patterns.md  security_requirements.md
.claude/tasks/: context_session_01.md  context_session_02.md  context_session_03.md
.superpowers/brainstorm/11074-1773607223/: .server-stopped  ai-analyze-flow.html
.superpowers/brainstorm/56575-1773431204/: .server-stopped  design-overview.html  navigation-style.html
alembic/: env.py
alembic/versions/: 27e841b4e154_add_tool_photos_table.py  6b4f4bec3d4d_initial_database_schema.py  a1b2c3d4e5f6_add_push_tokens_table.py  b2c3d4e5f6g7_add_is_admin_to_users.py  c3d4e5f6g7h8_add_address_fields_to_users.py  d4e5f6g7h8i9_add_notification_tables.py
apps/accounts/: apps.py  models.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/bookings/: models.py
apps/bookings/migrations/: 0001_initial.py
apps/core/: views.py
apps/notifications/: models.py
apps/notifications/migrations/: 0001_initial.py
apps/reviews/: models.py
apps/reviews/migrations/: 0001_initial.py
apps/tools/: models.py  urls.py  views.py
apps/tools/migrations/: 0001_initial.py
docs/superpowers/plans/: 2026-03-13-react-native-mobile-app.md  2026-03-22-railway-r2-migration.md  2026-03-23-app-store-preparation.md
docs/superpowers/specs/: 2026-03-13-react-native-mobile-app-design.md  2026-03-22-railway-r2-migration-design.md  2026-03-23-app-store-preparation-design.md
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/bookings/: page.tsx
frontend/app/categories/: page.tsx
frontend/app/my-tools/: page.tsx
frontend/contexts/: auth-context.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
infrastructure/bootstrap/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
mobile/: app.json  eas.json  package-lock.json  package.json  tailwind.config.js
mobile/.expo/: settings.json
mobile/app/: _layout.tsx  index.tsx  my-bookings.tsx  notifications.tsx  settings.tsx
mobile/constants/: colors.ts  config.ts  queryKeys.ts
mobile/contexts/: AuthContext.tsx
mobile/hooks/: useBookings.ts  useNotifications.ts  useReviews.ts  useTools.ts
mobile/lib/: api.ts  auth.ts  notifications.ts  queryClient.ts
mobile/types/: api.ts  booking.ts  index.ts  notification.ts  review.ts  tool.ts  user.ts
scripts/: deploy.sh  migrate-production.sh
templates/: home.html
templates/accounts/: login.html  signup.html
templates/base/: base.html
templates/tools/: create.html  detail.html  list.html
tests/: IMG_4653.HEIC  conftest.py  test_account_deletion.py  test_auth.py  test_bookings.py  test_notifications.py  test_reviews.py  test_simple.py  test_storage.py  test_tools.py
wippestoolen/: __init__.py  asgi.py  urls.py  wsgi.py
wippestoolen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wippestoolen/app/: __init__.py  main.py
wippestoolen/scripts/: seed_categories.py
wippestoolen/settings/: __init__.py  base.py  development.py  production.py
wippestoolen/tests/: test_booking_routes.py  test_notifications_ws_import.py  test_tools_availability_filter.py
(+105 files in other folders)
