[project]
name = "wippestoolen"
version = "0.1.0"
description = "A neighborhood tool-sharing platform where users can lend and borrow tools"
requires-python = ">=3.13"
dependencies = [
    "django>=5.0,<6.0",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.0",
    "django-leaflet>=0.29.0",
    "openai>=1.0.0",
    "celery[redis]>=5.3.0",
    "django-environ>=0.11.0",
    "django-crispy-forms>=2.0",
    "crispy-bootstrap5>=2023.10",
    "whitenoise>=6.6.0",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.2.0",
    "django-extensions>=3.2.0",
    "pytest-django>=4.5.0",
    "coverage>=7.3.0",
]
