[project]
name = "wippestoolen"
version = "0.1.0"
description = "A neighborhood tool-sharing platform where users can lend and borrow tools"
requires-python = ">=3.13"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
